@@ -16,15 +16,25 @@
     <maven.compiler.source>${jdk.version}</maven.compiler.source>
     <maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
 
+    <resource.plugin.version>3.1.0</resource.plugin.version>
+    <compiler.plugin.version>3.8.1</compiler.plugin.version>
+    <surefire.plugin.version>3.0.0-M5</surefire.plugin.version>
+
     <spring.security.version>5.5.1</spring.security.version>
     <spring.boot.version>2.5.0</spring.boot.version>
     <spring.version>5.3.8</spring.version>
-    <hbvalidator.version>6.0.21.Final</hbvalidator.version>
 
-    <logback.version>1.2.3</logback.version>
-    <slf4j.version>1.7.24</slf4j.version>
     <jackson.version>2.10.5.1</jackson.version>
     <jackson.format.version>2.10.5</jackson.format.version>
+
+    <jandex.version>1.0.8</jandex.version>
+    <quarkus.version>2.1.3.Final</quarkus.version>
+    <thena.version>1.1.15</thena.version>
+
+    <hbvalidator.version>6.0.21.Final</hbvalidator.version>
+    <logback.version>1.2.3</logback.version>
+    <slf4j.version>1.7.24</slf4j.version>
+    
     <immutables.version>2.8.2</immutables.version>
     <findbugs.version>3.0.2</findbugs.version>
     <guava.version>30.0-jre</guava.version>
@@ -47,24 +57,38 @@
 
   <build>
     <plugins>
+
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.0</version>
+        <version>${surefire.plugin.version}</version>
         <configuration>
           <argLine>
             --illegal-access=permit
           </argLine>
+          <systemPropertyVariables>
+            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+            <quarkus.log.level>INFO</quarkus.log.level>
+            <maven.home>${maven.home}</maven.home>
+          </systemPropertyVariables>
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.22.0</version>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>${compiler.plugin.version}</version>
         <configuration>
-          <argLine>
-            --illegal-access=permit
-          </argLine>
+          <parameters>true</parameters>
+          <annotationProcessorPaths>
+            <path>
+              <groupId>io.quarkus</groupId>
+              <artifactId>quarkus-extension-processor</artifactId>
+              <version>${quarkus.version}</version>
+            </path>
+            <path>
+              <groupId>org.immutables</groupId>
+              <artifactId>value</artifactId>
+              <version>${immutables.version}</version>
+            </path>
+          </annotationProcessorPaths>
         </configuration>
       </plugin>
       <plugin>
@@ -90,70 +114,71 @@
       </plugin>
     </plugins>
 
+
     <pluginManagement>
       <plugins>
         <plugin>
-          <groupId>pl.project13.maven</groupId>
-          <artifactId>git-commit-id-plugin</artifactId>
-          <version>${gitplugin.version}</version>
+          <artifactId>maven-clean-plugin</artifactId>
+          <version>3.1.0</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>3.2.0</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.felix</groupId>
+          <artifactId>maven-bundle-plugin</artifactId>
+          <version>3.2.0</version>
+        </plugin>
+        <plugin>
+          <groupId>io.quarkus</groupId>
+          <artifactId>quarkus-maven-plugin</artifactId>
+          <version>${quarkus.version}</version>
           <executions>
             <execution>
-              <id>get-the-git-infos</id>
               <goals>
-                <goal>revision</goal>
+                <goal>build</goal>
+                <goal>generate-code</goal>
+                <goal>generate-code-tests</goal>
               </goals>
             </execution>
           </executions>
+        </plugin>
+        <plugin>
+          <groupId>io.quarkus</groupId>
+          <artifactId>quarkus-bootstrap-maven-plugin</artifactId>
+          <version>${quarkus.version}</version>
+          <executions>
+            <execution>
+              <id>generate-extension-descriptor</id>
+              <goals>
+                <goal>extension-descriptor</goal>
+              </goals>
+              <phase>process-resources</phase>
+              <configuration>
+                <deployment>${project.groupId}:${project.artifactId}-deployment:${project.version}</deployment>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.jboss.jandex</groupId>
+          <artifactId>jandex-maven-plugin</artifactId>
+          <version>${jandex.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>com.github.eirslett</groupId>
+          <artifactId>frontend-maven-plugin</artifactId>
+          <version>${eirslett.version}</version>
           <configuration>
-            <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
-            <prefix>git</prefix>
-            <verbose>false</verbose>
-            <generateGitPropertiesFile>true</generateGitPropertiesFile>
-            <generateGitPropertiesFilename>${project.build.outputDirectory}/buildinfo.git.properties</generateGitPropertiesFilename>
-            <format>json</format>
-            <gitDescribe>
-              <skip>false</skip>
-              <always>true</always>
-              <dirty>-dirty</dirty>
-            </gitDescribe>
+            <installDirectory>target</installDirectory>
+            <nodeVersion>${nodeVersion}</nodeVersion>
+            <yarnVersion>${yarnVersion}</yarnVersion>
           </configuration>
         </plugin>
-
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.1</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-plugin-plugin</artifactId>
-          <version>3.6.0</version>
-        </plugin>
-
-        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
-        <plugin>
-          <groupId>org.eclipse.m2e</groupId>
-          <artifactId>lifecycle-mapping</artifactId>
-          <version>1.0.0</version>
-          <configuration>
-            <lifecycleMappingMetadata>
-              <pluginExecutions>
-                <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>buildnumber-maven-plugin</artifactId>
-                    <versionRange>[1.4,)</versionRange>
-                    <goals>
-                      <goal>create-timestamp</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <ignore />
-                  </action>
-                </pluginExecution>
-              </pluginExecutions>
-            </lifecycleMappingMetadata>
-          </configuration>
+          <artifactId>maven-resources-plugin</artifactId>
+          <version>${resource.plugin.version}</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -281,6 +306,30 @@
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-collections4</artifactId>
         <version>${commons-collections.version}</version>
+      </dependency>
+
+
+      <!-- Quarkus -->
+      <dependency>
+        <groupId>io.quarkus</groupId>
+        <artifactId>quarkus-bom</artifactId>
+        <version>${quarkus.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>io.quarkus</groupId>
+        <artifactId>quarkus-bom-test</artifactId>
+        <version>${quarkus.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>io.resys.hdes</groupId>
+        <artifactId>thena-bom</artifactId>
+        <version>${thena.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
 
       <!-- spring -->
